Zope Changes

  This file contains change information for the current Zope release.
  Change information for previous versions of Zope can be found in the
  file HISTORY.txt.

  For information on future releases, see ROADMAP.txt.

  After Zope 3.3.0 (trunk only)

    New features

      - Added ISkinChangedEvent to applySkin() function. This event is
        triggered whenever the skin of a request is changed.

      - Make the `label` and `hint` properties of the base Widget class
        read/write, and document in the interface that the implementation
        may or may not allow updating these properties.

      - Improved the asynchronous navigation tree of the 'Rotterdam' skin:
        highlight current object, do not display '+' icon if object contains
        no element, remove message "Loading" if unable to retrieve XML tree.

      - Revamped i18n for German for all user-readable strings

      - The getForm() method on testbrowser instances no longer needs
        arguments to disambiguate among forms if there's only one form
        in the input.

      - The security setting values from zope.app.security.settings are now
        exported by zope.app.securitypolicy.interfaces, since they are
        exposed by the APIs defined there, and are not used in the
        zope.app.security package at all.  zope.app.securitypolicy.intefaces
        will be the preferred location from which to import these values.

      - Added xmlrpclib.ServerProxy variation in zope.app.testing.xmlrpc
        that allows testing XML-RPC views in functional tests.

      - Added attribute `permission` to the `browser:menuItems`-directive to
        allow setting a default value for all menu items defined in this
        directive.

      - Added a new interface decorator to zope.interface that allows the
        setting tagged values on an interface at definition time (see
        zope.interface.taggedValue).
