@@ -69,3 +69,19 @@
   </div>
 
 </metal:block>
+
+
+<metal:block define-macro="breadcrumbs">
+
+  <p class="breadcrumbs">
+    <tal:block repeat="entry context/@@code_breadcrumbs">
+      <a href=""
+        tal:attributes="href string:${entry/url}/index.html"
+        tal:content="entry/name"
+        i18n:translate=""
+        tal:omit-tag="repeat/entry/end" />
+      <span tal:omit-tag="" tal:condition="not: repeat/entry/end">/</span>
+    </tal:block>
+  </p>
+
+</metal:block>
