@@ -2,10 +2,12 @@
     i18n:domain="zope">
 <body metal:fill-slot="contents">
 
-  <h1 class="details-header"
-      tal:content="context/getPath">
-    zope.app.function
+  <h1 class="details-header">
+    <span class="pre-header">Function</span><br />
+    <span tal:replace="context/getPath">zope.app.function</span>
   </h1>
+
+  <p metal:use-macro="views/apidoc_macros/breadcrumbs" />
 
   <h2 class="details-section" i18n:translate="">Signature</h2>
 
