@@ -3,9 +3,12 @@
 <body metal:fill-slot="contents"
       tal:define="rootURL view/apidocRoot">
 
-  <h1 class="details-header" tal:content="view/getId">
-    zope.app.interfaces.IInterface
+  <h1 class="details-header">
+    <span class="pre-header">Interface</span><br />
+    <span tal:replace="view/getId">zope.app.interfaces.IInterface</span>
   </h1>
+
+  <p metal:use-macro="views/apidoc_macros/breadcrumbs" />
 
   <h3 tal:condition="view/getTypes">
     Type:
